--- a/AgoraNet.Tests/AgoraNet.Tests.csproj
+++ b/AgoraNet.Tests/AgoraNet.Tests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AgoraNet\AgoraNet.Core.csproj" />
+    <ProjectReference Include="..\AgoraNet.Core\AgoraNet.Core.csproj" />
   </ItemGroup>
 
 </Project>
